--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    // Set this dependency if you want to use Hamcrest matching
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     compile 'com.google.code.gson:gson:2.2.+'
     compile "com.opencsv:opencsv:4.0"
+        compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
 }
 
 test {
     useJUnitPlatform()
-}
+3}
