--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     compile 'com.google.code.gson:gson:2.2.+'
     compile "com.opencsv:opencsv:4.0"
-        compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+    compile "org.apache.commons:commons-csv:1.5"
+
 }
 
 test {
